--- a/templates/login.html
+++ b/templates/login.html
@@ -14,8 +14,8 @@
     <header class="container">
         <div class="row">
             <h1 class="col-sm-4">THE BULLETIN</h1>
-            <nav class="col-sm-8 text-right">
-                <a href="signup.html">Sign Up</a>
+           <nav class="col-sm-8 text-right">
+                <a href="signup">Sign Up</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </nav>
