--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,6 +5,7 @@
     <title>
         Student's Dashboard | Discussion - The Bulletin
     </title>
+    <link rel="icon" href="../static/assets/icon.jpg"" />
     <link href="../static/style.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:300,400,700' rel='stylesheet' type='text/css' />
@@ -25,19 +26,19 @@
 <body>
     <sidebar>
         <h3>Dashboard</h3>
-        <a id="notices" href="student_notices.html"><i class="fa fa-newspaper-o"></i>&nbsp;&nbsp;&nbsp;Notices</a>
-        <a id="discussion" href="student_discussion.html"><i class="fa fa-comments"></i>&nbsp;&nbsp;&nbsp;Discussion</a>
-        <a id="inventory" href="student_inventory.html"><i class="fa fa-cubes"></i>&nbsp;&nbsp;&nbsp;Inventory</a>
+        <a id="notices" href="student_notices"><i class="fa fa-newspaper-o"></i>&nbsp;&nbsp;&nbsp;Notices</a>
+        <a id="discussion" href="student_discussion"><i class="fa fa-comments"></i>&nbsp;&nbsp;&nbsp;Discussion</a>
+        <a id="inventory" href="student_inventory"><i class="fa fa-cubes"></i>&nbsp;&nbsp;&nbsp;Inventory</a>
         <hr>
         <a id="profile"><i class="fa fa-user"></i>&nbsp;&nbsp;&nbsp;Profile</a>
         <a id="contact" href="#"><i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;Contact</a>
-        <a id="logout" href="login.html"><i class="fa fa-sign-out"></i>&nbsp;&nbsp;&nbsp;Log Out</a>
+        <a id="logout" href="login"><i class="fa fa-sign-out"></i>&nbsp;&nbsp;&nbsp;Log Out</a>
     </sidebar>
     <main>
         <h1>THE BULLETIN</h1>
         <h3>Stay connected anywhere and anytime!</h3>
         <profile>
-            <img class="Thumbnail" src="assets/1.jpg" type="jpg" />
+            <img class="Thumbnail" src="../static/assets/icon.jpg" type="jpg" />
             <prof>
                 <h4 id="firstname" class="info">
                     First Name :
