--- a/templates/error.html
+++ b/templates/error.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="../CSS/style.css" type="text/css" rel="stylesheet" />
+    <link href="../static/style.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:300,400,700' rel='stylesheet' type='text/css' />
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css' />
@@ -20,7 +20,7 @@
 
 <body class="container">
     <div class="row error_body">
-        <img class="error_img col-xs-6" src="assets/error3.gif" type="img/gif" />
+        <img class="error_img col-xs-6" src="../static/assets/error3.gif" type="img/gif" />
         <div class="error_text col-xs-6">
             <h1>ERROR</h1>
             <h3>It broke down<br>Sorry for the inconvenience caused</h3>
