--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,7 +15,7 @@
         <div class="row">
             <h1 class="col-sm-4">THE BULLETIN</h1>
             <nav class="col-sm-8 text-right">
-                <a href="login.html">Log In</a>
+                <a href="login">Log In</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </nav>
@@ -26,7 +26,7 @@
             <h2>
                 <strong>Sign Up</strong>
             </h2>
-<form method="post">
+<form method="post" action="">
 
  {%import "bootstrap/wtf.html" as wtf%}
   <dl>
